JS fixes - changed the source point of determining when to rotate the red arrow, no more does clicking other questions break the functionality

--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -8,6 +8,7 @@ html {
     padding: 0;
     font-family: 'Kumbh Sans', sans-serif;
     Font-size: 12px;
+    color: #4a4b5e;
 }
 
 body {
